@@ -2481,6 +2481,8 @@ as below:
 
 @hook TARGET_DIFFERENT_ADDR_DISPLACEMENT_P
 
+@hook TARGET_CANNOT_SUBSTITUTE_MEM_EQUIV_P
+
 @hook TARGET_SPILL_CLASS
 
 @hook TARGET_CSTORE_MODE
